Update logic in returned endpoint